--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "[5 rows x 87 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -254,29 +254,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00:00:02</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00:00:04</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>00:00:06</td>\n",
        "      <td>Se</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00:00:08</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -289,209 +269,134 @@
        "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>00:00:14</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>00:00:16</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>00:00:18</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>00:00:20</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>00:00:22</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>00:00:24</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>00:00:26</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>00:00:28</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>00:00:30</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>00:00:32</td>\n",
        "      <td>In</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>00:00:34</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>31</th>\n",
+       "      <td>00:01:02</td>\n",
+       "      <td>In</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>00:00:36</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>46</th>\n",
+       "      <td>00:01:32</td>\n",
+       "      <td>In</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>00:00:38</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>54</th>\n",
+       "      <td>00:01:48</td>\n",
+       "      <td>L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>00:00:40</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>57</th>\n",
+       "      <td>00:01:54</td>\n",
+       "      <td>L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>00:00:42</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>61</th>\n",
+       "      <td>00:02:02</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>00:00:44</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>62</th>\n",
+       "      <td>00:02:04</td>\n",
+       "      <td>N*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>00:00:46</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>64</th>\n",
+       "      <td>00:02:08</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>00:00:48</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>68</th>\n",
+       "      <td>00:02:16</td>\n",
+       "      <td>L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>00:00:50</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>71</th>\n",
+       "      <td>00:02:22</td>\n",
+       "      <td>I</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>00:00:52</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>74</th>\n",
+       "      <td>00:02:28</td>\n",
+       "      <td>N*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>00:00:54</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>75</th>\n",
+       "      <td>00:02:30</td>\n",
+       "      <td>L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>00:00:56</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>77</th>\n",
+       "      <td>00:02:34</td>\n",
+       "      <td>L*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>00:00:58</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>78</th>\n",
+       "      <td>00:02:36</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>90</th>\n",
+       "      <td>00:03:00</td>\n",
+       "      <td>L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>00:05:24</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>93</th>\n",
+       "      <td>00:03:06</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>00:05:26</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>100</th>\n",
+       "      <td>00:03:20</td>\n",
+       "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>00:05:28</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>114</th>\n",
+       "      <td>00:03:48</td>\n",
+       "      <td>In</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>00:05:30</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>115</th>\n",
+       "      <td>00:03:50</td>\n",
+       "      <td>a1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166</th>\n",
-       "      <td>00:05:32</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>136</th>\n",
+       "      <td>00:04:32</td>\n",
+       "      <td>In</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>00:05:34</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>139</th>\n",
+       "      <td>00:04:38</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>00:05:36</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>140</th>\n",
+       "      <td>00:04:40</td>\n",
+       "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>00:05:38</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>142</th>\n",
+       "      <td>00:04:44</td>\n",
+       "      <td>S*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>00:05:40</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>143</th>\n",
+       "      <td>00:04:46</td>\n",
+       "      <td>Se</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>00:05:42</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>00:05:44</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>158</th>\n",
+       "      <td>00:05:16</td>\n",
+       "      <td>In</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
        "      <td>00:05:46</td>\n",
        "      <td>In</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>00:05:48</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>00:05:50</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>00:05:52</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>00:05:54</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>00:05:56</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>179</th>\n",
@@ -504,139 +409,58 @@
        "      <td>L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>00:06:02</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>00:06:04</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>00:06:06</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>00:06:08</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>00:06:10</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>00:06:12</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>00:06:14</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>00:06:16</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>189</th>\n",
        "      <td>00:06:18</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>00:06:20</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>00:06:22</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>192 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       tiempo   1a\n",
-       "0    00:00:00  NaN\n",
-       "1    00:00:02  NaN\n",
-       "2    00:00:04  NaN\n",
        "3    00:00:06   Se\n",
-       "4    00:00:08  NaN\n",
        "5    00:00:10  Si \n",
        "6    00:00:12    N\n",
-       "7    00:00:14  NaN\n",
-       "8    00:00:16  NaN\n",
-       "9    00:00:18  NaN\n",
-       "10   00:00:20  NaN\n",
-       "11   00:00:22  NaN\n",
-       "12   00:00:24  NaN\n",
-       "13   00:00:26  NaN\n",
-       "14   00:00:28  NaN\n",
-       "15   00:00:30  NaN\n",
        "16   00:00:32   In\n",
-       "17   00:00:34  NaN\n",
-       "18   00:00:36  NaN\n",
-       "19   00:00:38  NaN\n",
-       "20   00:00:40  NaN\n",
-       "21   00:00:42  NaN\n",
-       "22   00:00:44  NaN\n",
-       "23   00:00:46  NaN\n",
-       "24   00:00:48  NaN\n",
-       "25   00:00:50  NaN\n",
-       "26   00:00:52  NaN\n",
-       "27   00:00:54  NaN\n",
-       "28   00:00:56  NaN\n",
-       "29   00:00:58  NaN\n",
-       "..        ...  ...\n",
-       "162  00:05:24  NaN\n",
-       "163  00:05:26  NaN\n",
-       "164  00:05:28  NaN\n",
-       "165  00:05:30  NaN\n",
-       "166  00:05:32  NaN\n",
-       "167  00:05:34  NaN\n",
-       "168  00:05:36  NaN\n",
-       "169  00:05:38  NaN\n",
-       "170  00:05:40  NaN\n",
-       "171  00:05:42  NaN\n",
-       "172  00:05:44  NaN\n",
+       "31   00:01:02   In\n",
+       "46   00:01:32   In\n",
+       "54   00:01:48    L\n",
+       "57   00:01:54    L\n",
+       "61   00:02:02    N\n",
+       "62   00:02:04   N*\n",
+       "64   00:02:08    N\n",
+       "68   00:02:16    L\n",
+       "71   00:02:22    I\n",
+       "74   00:02:28   N*\n",
+       "75   00:02:30    L\n",
+       "77   00:02:34   L*\n",
+       "78   00:02:36    N\n",
+       "90   00:03:00    L\n",
+       "93   00:03:06    N\n",
+       "100  00:03:20    S\n",
+       "114  00:03:48   In\n",
+       "115  00:03:50   a1\n",
+       "136  00:04:32   In\n",
+       "139  00:04:38    F\n",
+       "140  00:04:40    C\n",
+       "142  00:04:44   S*\n",
+       "143  00:04:46   Se\n",
+       "158  00:05:16   In\n",
        "173  00:05:46   In\n",
-       "174  00:05:48  NaN\n",
-       "175  00:05:50  NaN\n",
-       "176  00:05:52  NaN\n",
-       "177  00:05:54  NaN\n",
-       "178  00:05:56  NaN\n",
        "179  00:05:58    S\n",
        "180  00:06:00    L\n",
-       "181  00:06:02  NaN\n",
-       "182  00:06:04  NaN\n",
-       "183  00:06:06  NaN\n",
-       "184  00:06:08  NaN\n",
-       "185  00:06:10  NaN\n",
-       "186  00:06:12  NaN\n",
-       "187  00:06:14  NaN\n",
-       "188  00:06:16  NaN\n",
-       "189  00:06:18    S\n",
-       "190  00:06:20  NaN\n",
-       "191  00:06:22  NaN\n",
-       "\n",
-       "[192 rows x 2 columns]"
+       "189  00:06:18    S"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['tiempo', '1a']]"
+    "dfs = df[['tiempo', '1a']]\n",
+    "dfs.loc[~pd.isna(dfs['1a'])]"
    ]
   },
   {
