--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +250,7 @@
        "      <th></th>\n",
        "      <th>tiempo</th>\n",
        "      <th>1a</th>\n",
+       "      <th>time_s</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -257,210 +258,252 @@
        "      <th>3</th>\n",
        "      <td>00:00:06</td>\n",
        "      <td>Se</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>00:00:10</td>\n",
        "      <td>Si</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>00:00:12</td>\n",
        "      <td>N</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>00:00:32</td>\n",
        "      <td>In</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>00:01:02</td>\n",
        "      <td>In</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
        "      <td>00:01:32</td>\n",
        "      <td>In</td>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54</th>\n",
        "      <td>00:01:48</td>\n",
        "      <td>L</td>\n",
+       "      <td>108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57</th>\n",
        "      <td>00:01:54</td>\n",
        "      <td>L</td>\n",
+       "      <td>114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
        "      <td>00:02:02</td>\n",
        "      <td>N</td>\n",
+       "      <td>122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
        "      <td>00:02:04</td>\n",
        "      <td>N*</td>\n",
+       "      <td>124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
        "      <td>00:02:08</td>\n",
        "      <td>N</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68</th>\n",
        "      <td>00:02:16</td>\n",
        "      <td>L</td>\n",
+       "      <td>136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
        "      <td>00:02:22</td>\n",
        "      <td>I</td>\n",
+       "      <td>142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
        "      <td>00:02:28</td>\n",
        "      <td>N*</td>\n",
+       "      <td>148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
        "      <td>00:02:30</td>\n",
        "      <td>L</td>\n",
+       "      <td>150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
        "      <td>00:02:34</td>\n",
        "      <td>L*</td>\n",
+       "      <td>154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
        "      <td>00:02:36</td>\n",
        "      <td>N</td>\n",
+       "      <td>156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>90</th>\n",
        "      <td>00:03:00</td>\n",
        "      <td>L</td>\n",
+       "      <td>180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>93</th>\n",
        "      <td>00:03:06</td>\n",
        "      <td>N</td>\n",
+       "      <td>186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
        "      <td>00:03:20</td>\n",
        "      <td>S</td>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
        "      <td>00:03:48</td>\n",
        "      <td>In</td>\n",
+       "      <td>228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
        "      <td>00:03:50</td>\n",
        "      <td>a1</td>\n",
+       "      <td>230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
        "      <td>00:04:32</td>\n",
        "      <td>In</td>\n",
+       "      <td>272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>139</th>\n",
        "      <td>00:04:38</td>\n",
        "      <td>F</td>\n",
+       "      <td>278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>140</th>\n",
        "      <td>00:04:40</td>\n",
        "      <td>C</td>\n",
+       "      <td>280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>142</th>\n",
        "      <td>00:04:44</td>\n",
        "      <td>S*</td>\n",
+       "      <td>284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143</th>\n",
        "      <td>00:04:46</td>\n",
        "      <td>Se</td>\n",
+       "      <td>286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>158</th>\n",
        "      <td>00:05:16</td>\n",
        "      <td>In</td>\n",
+       "      <td>316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
        "      <td>00:05:46</td>\n",
        "      <td>In</td>\n",
+       "      <td>346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>179</th>\n",
        "      <td>00:05:58</td>\n",
        "      <td>S</td>\n",
+       "      <td>358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>180</th>\n",
        "      <td>00:06:00</td>\n",
        "      <td>L</td>\n",
+       "      <td>360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>189</th>\n",
        "      <td>00:06:18</td>\n",
        "      <td>S</td>\n",
+       "      <td>378</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       tiempo   1a\n",
-       "3    00:00:06   Se\n",
-       "5    00:00:10  Si \n",
-       "6    00:00:12    N\n",
-       "16   00:00:32   In\n",
-       "31   00:01:02   In\n",
-       "46   00:01:32   In\n",
-       "54   00:01:48    L\n",
-       "57   00:01:54    L\n",
-       "61   00:02:02    N\n",
-       "62   00:02:04   N*\n",
-       "64   00:02:08    N\n",
-       "68   00:02:16    L\n",
-       "71   00:02:22    I\n",
-       "74   00:02:28   N*\n",
-       "75   00:02:30    L\n",
-       "77   00:02:34   L*\n",
-       "78   00:02:36    N\n",
-       "90   00:03:00    L\n",
-       "93   00:03:06    N\n",
-       "100  00:03:20    S\n",
-       "114  00:03:48   In\n",
-       "115  00:03:50   a1\n",
-       "136  00:04:32   In\n",
-       "139  00:04:38    F\n",
-       "140  00:04:40    C\n",
-       "142  00:04:44   S*\n",
-       "143  00:04:46   Se\n",
-       "158  00:05:16   In\n",
-       "173  00:05:46   In\n",
-       "179  00:05:58    S\n",
-       "180  00:06:00    L\n",
-       "189  00:06:18    S"
+       "       tiempo   1a  time_s\n",
+       "3    00:00:06   Se       6\n",
+       "5    00:00:10  Si       10\n",
+       "6    00:00:12    N      12\n",
+       "16   00:00:32   In      32\n",
+       "31   00:01:02   In      62\n",
+       "46   00:01:32   In      92\n",
+       "54   00:01:48    L     108\n",
+       "57   00:01:54    L     114\n",
+       "61   00:02:02    N     122\n",
+       "62   00:02:04   N*     124\n",
+       "64   00:02:08    N     128\n",
+       "68   00:02:16    L     136\n",
+       "71   00:02:22    I     142\n",
+       "74   00:02:28   N*     148\n",
+       "75   00:02:30    L     150\n",
+       "77   00:02:34   L*     154\n",
+       "78   00:02:36    N     156\n",
+       "90   00:03:00    L     180\n",
+       "93   00:03:06    N     186\n",
+       "100  00:03:20    S     200\n",
+       "114  00:03:48   In     228\n",
+       "115  00:03:50   a1     230\n",
+       "136  00:04:32   In     272\n",
+       "139  00:04:38    F     278\n",
+       "140  00:04:40    C     280\n",
+       "142  00:04:44   S*     284\n",
+       "143  00:04:46   Se     286\n",
+       "158  00:05:16   In     316\n",
+       "173  00:05:46   In     346\n",
+       "179  00:05:58    S     358\n",
+       "180  00:06:00    L     360\n",
+       "189  00:06:18    S     378"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dfs = df[['tiempo', '1a']]\n",
-    "dfs.loc[~pd.isna(dfs['1a'])]"
+    "dfs = dfs.loc[~pd.isna(dfs['1a'])] #quitar todos los NaN (qudarnos solo con los eventos)\n",
+    "\n",
+    "times_s=[]\n",
+    "for i in range(0, len(dfs)):\n",
+    "    l = dfs.tiempo.iloc[i]\n",
+    "    times_s.append(  int(datetime.timedelta(hours=l.hour, minutes=l.minute, seconds=l.second).total_seconds()) )\n",
+    "\n",
+    "\n",
+    "dfs['time_s'] = times_s\n",
+    "dfs\n",
+    "\n"
    ]
   },
   {
