--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +59,12 @@
        "      <th>4a</th>\n",
        "      <th>4b</th>\n",
        "      <th>...</th>\n",
+       "      <th>34a</th>\n",
        "      <th>34b</th>\n",
        "      <th>35a</th>\n",
        "      <th>35b</th>\n",
        "      <th>36a</th>\n",
        "      <th>36b</th>\n",
-       "      <th>36c</th>\n",
        "      <th>37a</th>\n",
        "      <th>37b</th>\n",
        "      <th>38a</th>\n",
@@ -109,11 +109,11 @@
        "      <td>a4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
+       "      <td>a3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>A5</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -134,8 +134,8 @@
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>a4</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>a4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -157,11 +157,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
+       "      <td>L</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -194,28 +194,28 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 86 columns</p>\n",
+       "<p>5 rows × 83 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     tiempo   1a   1b   2a   2b   2c   3a   3b   4a   4b ...   34b  35a  35b  \\\n",
+       "     tiempo   1a   1b   2a   2b   2c   3a   3b   4a   4b ...   34a  34b  35a  \\\n",
        "0  00:00:00  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN ...   NaN  NaN  NaN   \n",
-       "1  00:00:02  NaN  NaN   A7  NaN  NaN   a4  NaN   a4  NaN ...   NaN  NaN  NaN   \n",
-       "2  00:00:04  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN ...   NaN   a4  NaN   \n",
-       "3  00:00:06   Se  NaN  NaN  NaN  NaN    O  NaN  NaN  NaN ...   NaN  NaN  NaN   \n",
+       "1  00:00:02  NaN  NaN   A7  NaN  NaN   a4  NaN   a4  NaN ...    a3  NaN  NaN   \n",
+       "2  00:00:04  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN ...   NaN  NaN   a4   \n",
+       "3  00:00:06   Se  NaN  NaN  NaN  NaN    O  NaN  NaN  NaN ...     L  NaN  NaN   \n",
        "4  00:00:08  NaN  NaN    N  NaN  NaN  NaN  NaN  NaN  NaN ...   NaN  NaN  NaN   \n",
        "\n",
-       "   36a  36b 36c  37a  37b  38a  38b  \n",
-       "0  NaN  NaN NaN  NaN  NaN  NaN  NaN  \n",
-       "1   A5  NaN NaN  NaN  NaN   A5  NaN  \n",
-       "2  NaN  NaN NaN  NaN  NaN  NaN  NaN  \n",
-       "3    N  NaN NaN  NaN  NaN  NaN  NaN  \n",
-       "4  NaN  NaN NaN  NaN  NaN    O  NaN  \n",
+       "   35b  36a  36b  37a  37b  38a  38b  \n",
+       "0  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "1  NaN   A5  NaN  NaN  NaN   A5  NaN  \n",
+       "2  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "3  NaN    N  NaN  NaN  NaN  NaN  NaN  \n",
+       "4  NaN  NaN  NaN  NaN  NaN    O  NaN  \n",
        "\n",
-       "[5 rows x 86 columns]"
+       "[5 rows x 83 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,11 +226,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 215,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33a\n",
+      "33b\n",
+      "34a\n",
+      "34b\n",
+      "35a\n",
+      "35b\n",
+      "36a\n",
+      "36b\n",
+      "37a\n",
+      "37b\n",
+      "38a\n",
+      "38b\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -261,324 +279,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00:00:02</td>\n",
-       "      <td>a4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00:00:04</td>\n",
+       "      <th>56</th>\n",
+       "      <td>00:01:52</td>\n",
        "      <td>S</td>\n",
-       "      <td>4</td>\n",
+       "      <td>112</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00:00:08</td>\n",
-       "      <td>Se</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>00:00:14</td>\n",
-       "      <td>S</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>00:00:24</td>\n",
-       "      <td>O</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>00:00:28</td>\n",
-       "      <td>N</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>00:00:38</td>\n",
-       "      <td>Se</td>\n",
        "      <td>38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>00:00:42</td>\n",
-       "      <td>N</td>\n",
-       "      <td>42</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>00:00:54</td>\n",
-       "      <td>N</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>00:01:04</td>\n",
-       "      <td>S</td>\n",
-       "      <td>64</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>00:01:26</td>\n",
-       "      <td>N</td>\n",
-       "      <td>86</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>00:01:54</td>\n",
-       "      <td>L</td>\n",
-       "      <td>114</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>00:01:58</td>\n",
-       "      <td>N</td>\n",
-       "      <td>118</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>00:02:00</td>\n",
-       "      <td>L</td>\n",
-       "      <td>120</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>00:02:06</td>\n",
-       "      <td>L</td>\n",
-       "      <td>126</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>00:02:10</td>\n",
-       "      <td>N</td>\n",
-       "      <td>130</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>00:02:14</td>\n",
-       "      <td>L</td>\n",
-       "      <td>134</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>00:02:20</td>\n",
-       "      <td>N</td>\n",
-       "      <td>140</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>00:02:24</td>\n",
+       "      <th>61</th>\n",
+       "      <td>00:02:02</td>\n",
        "      <td>D</td>\n",
-       "      <td>144</td>\n",
+       "      <td>122</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>00:02:34</td>\n",
+       "      <th>71</th>\n",
+       "      <td>00:02:22</td>\n",
        "      <td>L</td>\n",
-       "      <td>154</td>\n",
+       "      <td>142</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>00:02:38</td>\n",
-       "      <td>O</td>\n",
-       "      <td>158</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>00:02:42</td>\n",
-       "      <td>N</td>\n",
-       "      <td>162</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>00:02:46</td>\n",
+       "      <th>82</th>\n",
+       "      <td>00:02:44</td>\n",
        "      <td>S</td>\n",
-       "      <td>166</td>\n",
+       "      <td>164</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>00:03:04</td>\n",
+       "      <th>89</th>\n",
+       "      <td>00:02:58</td>\n",
        "      <td>L</td>\n",
-       "      <td>184</td>\n",
+       "      <td>178</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>00:03:12</td>\n",
+       "      <th>141</th>\n",
+       "      <td>00:04:42</td>\n",
        "      <td>S</td>\n",
-       "      <td>192</td>\n",
+       "      <td>282</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>00:03:16</td>\n",
-       "      <td>O</td>\n",
-       "      <td>196</td>\n",
+       "      <th>160</th>\n",
+       "      <td>00:05:20</td>\n",
+       "      <td>D</td>\n",
+       "      <td>320</td>\n",
        "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>00:03:24</td>\n",
-       "      <td>Si</td>\n",
-       "      <td>204</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>00:03:26</td>\n",
-       "      <td>Se</td>\n",
-       "      <td>206</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>00:03:48</td>\n",
-       "      <td>S</td>\n",
-       "      <td>228</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>00:03:54</td>\n",
-       "      <td>O</td>\n",
-       "      <td>234</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>00:03:56</td>\n",
-       "      <td>N</td>\n",
-       "      <td>236</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>00:04:26</td>\n",
-       "      <td>S</td>\n",
-       "      <td>266</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>00:04:56</td>\n",
-       "      <td>R</td>\n",
-       "      <td>296</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>00:04:58</td>\n",
-       "      <td>N</td>\n",
-       "      <td>298</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>00:05:04</td>\n",
-       "      <td>L</td>\n",
-       "      <td>304</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>00:05:14</td>\n",
-       "      <td>F</td>\n",
-       "      <td>314</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>00:05:18</td>\n",
-       "      <td>S</td>\n",
-       "      <td>318</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>00:05:54</td>\n",
-       "      <td>S</td>\n",
-       "      <td>354</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>00:05:56</td>\n",
-       "      <td>a3</td>\n",
-       "      <td>356</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>00:06:18</td>\n",
-       "      <td>A6</td>\n",
-       "      <td>378</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -586,49 +340,16 @@
       ],
       "text/plain": [
        "       tiempo event  time_s  trick  subject\n",
-       "1    00:00:02    a4       2      1       18\n",
-       "2    00:00:04     S       4      1       18\n",
-       "4    00:00:08    Se       8      1       18\n",
-       "7    00:00:14     S      14      1       18\n",
-       "12   00:00:24     O      24      1       18\n",
-       "14   00:00:28     N      28      1       18\n",
-       "19   00:00:38    Se      38      1       18\n",
-       "21   00:00:42     N      42      1       18\n",
-       "27   00:00:54     N      54      1       18\n",
-       "32   00:01:04     S      64      1       18\n",
-       "43   00:01:26     N      86      1       18\n",
-       "57   00:01:54     L     114      1       18\n",
-       "59   00:01:58     N     118      1       18\n",
-       "60   00:02:00     L     120      1       18\n",
-       "63   00:02:06     L     126      1       18\n",
-       "65   00:02:10     N     130      1       18\n",
-       "67   00:02:14     L     134      1       18\n",
-       "70   00:02:20     N     140      1       18\n",
-       "72   00:02:24     D     144      1       18\n",
-       "77   00:02:34     L     154      1       18\n",
-       "79   00:02:38     O     158      1       18\n",
-       "81   00:02:42     N     162      1       18\n",
-       "83   00:02:46     S     166      1       18\n",
-       "92   00:03:04     L     184      1       18\n",
-       "96   00:03:12     S     192      1       18\n",
-       "98   00:03:16     O     196      1       18\n",
-       "102  00:03:24    Si     204      1       18\n",
-       "103  00:03:26    Se     206      1       18\n",
-       "114  00:03:48     S     228      1       18\n",
-       "117  00:03:54     O     234      1       18\n",
-       "118  00:03:56     N     236      1       18\n",
-       "133  00:04:26     S     266      1       18\n",
-       "148  00:04:56     R     296      1       18\n",
-       "149  00:04:58     N     298      1       18\n",
-       "152  00:05:04     L     304      1       18\n",
-       "157  00:05:14     F     314      1       18\n",
-       "159  00:05:18     S     318      1       18\n",
-       "177  00:05:54     S     354      1       18\n",
-       "178  00:05:56    a3     356      1       18\n",
-       "189  00:06:18    A6     378      1       18"
+       "56   00:01:52     S     112      1       38\n",
+       "61   00:02:02     D     122      1       38\n",
+       "71   00:02:22     L     142      1       38\n",
+       "82   00:02:44     S     164      1       38\n",
+       "89   00:02:58     L     178      1       38\n",
+       "141  00:04:42     S     282      1       38\n",
+       "160  00:05:20     D     320      1       38"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,10 +358,10 @@
     "list_columns_subjects = list(df.columns)\n",
     "list_columns_subjects.remove('tiempo')\n",
     "\n",
-    "list_columns_subjects=list_columns_subjects[:36]\n",
+    "list_columns_subjects=list_columns_subjects[70:84] ## para ir comprobando, una a una, que no haya espacios vacíos!\n",
     "\n",
     "for subject in list_columns_subjects:\n",
-    "    #print(subject)\n",
+    "    print(subject)\n",
     "    dfs = df[['tiempo', subject]]\n",
     "    dfs = dfs.loc[~pd.isna(dfs[subject])] # Quitar todos los NaN (qudarnos solo con los eventos)\n",
     "    ####################################### Añadir una columna de segundos\n",
