--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -353,6 +353,14 @@
        "    <tr>\n",
        "      <th>57</th>\n",
        "      <td>00:01:54</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>00:01:54</td>\n",
        "      <td>L</td>\n",
        "      <td>114</td>\n",
        "      <td>1</td>\n",
@@ -399,6 +407,14 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>00:02:22</td>\n",
+       "      <td>S</td>\n",
+       "      <td>142</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>74</th>\n",
        "      <td>00:02:28</td>\n",
        "      <td>N*</td>\n",
@@ -425,6 +441,14 @@
        "    <tr>\n",
        "      <th>78</th>\n",
        "      <td>00:02:36</td>\n",
+       "      <td>S</td>\n",
+       "      <td>156</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>00:02:36</td>\n",
        "      <td>N</td>\n",
        "      <td>156</td>\n",
        "      <td>1</td>\n",
@@ -439,9 +463,25 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>00:03:00</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>93</th>\n",
        "      <td>00:03:06</td>\n",
        "      <td>N</td>\n",
+       "      <td>186</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>00:03:06</td>\n",
+       "      <td>L*</td>\n",
        "      <td>186</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -451,6 +491,14 @@
        "      <td>00:03:20</td>\n",
        "      <td>S</td>\n",
        "      <td>200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>00:03:48</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>228</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -471,9 +519,25 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>00:03:50</td>\n",
+       "      <td>S</td>\n",
+       "      <td>230</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>136</th>\n",
        "      <td>00:04:32</td>\n",
        "      <td>In</td>\n",
+       "      <td>272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>00:04:32</td>\n",
+       "      <td>S</td>\n",
        "      <td>272</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -499,6 +563,14 @@
        "      <td>00:04:44</td>\n",
        "      <td>S*</td>\n",
        "      <td>284</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>00:04:46</td>\n",
+       "      <td>N</td>\n",
+       "      <td>286</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -551,78 +623,6 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>00:01:54</td>\n",
-       "      <td>N*</td>\n",
-       "      <td>114</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>00:02:22</td>\n",
-       "      <td>S</td>\n",
-       "      <td>142</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>00:02:36</td>\n",
-       "      <td>S</td>\n",
-       "      <td>156</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>00:03:00</td>\n",
-       "      <td>N*</td>\n",
-       "      <td>180</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>00:03:06</td>\n",
-       "      <td>L*</td>\n",
-       "      <td>186</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>00:03:48</td>\n",
-       "      <td>N*</td>\n",
-       "      <td>228</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>00:03:50</td>\n",
-       "      <td>S</td>\n",
-       "      <td>230</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>00:04:32</td>\n",
-       "      <td>S</td>\n",
-       "      <td>272</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143</th>\n",
-       "      <td>00:04:46</td>\n",
-       "      <td>N</td>\n",
-       "      <td>286</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>190</th>\n",
        "      <td>00:06:20</td>\n",
        "      <td>A8</td>\n",
@@ -643,51 +643,51 @@
        "31   00:01:02    In      62      1        1\n",
        "46   00:01:32    In      92      1        1\n",
        "54   00:01:48     L     108      1        1\n",
+       "57   00:01:54    N*     114      1        1\n",
        "57   00:01:54     L     114      1        1\n",
        "61   00:02:02     N     122      1        1\n",
        "62   00:02:04    N*     124      1        1\n",
        "64   00:02:08     N     128      1        1\n",
        "68   00:02:16     L     136      1        1\n",
        "71   00:02:22     I     142      1        1\n",
+       "71   00:02:22     S     142      1        1\n",
        "74   00:02:28    N*     148      1        1\n",
        "75   00:02:30     L     150      1        1\n",
        "77   00:02:34    L*     154      1        1\n",
+       "78   00:02:36     S     156      1        1\n",
        "78   00:02:36     N     156      1        1\n",
        "90   00:03:00     L     180      1        1\n",
+       "90   00:03:00    N*     180      1        1\n",
        "93   00:03:06     N     186      1        1\n",
+       "93   00:03:06    L*     186      1        1\n",
        "100  00:03:20     S     200      1        1\n",
+       "114  00:03:48    N*     228      1        1\n",
        "114  00:03:48    In     228      1        1\n",
        "115  00:03:50    a1     230      1        1\n",
+       "115  00:03:50     S     230      1        1\n",
        "136  00:04:32    In     272      1        1\n",
+       "136  00:04:32     S     272      1        1\n",
        "139  00:04:38     F     278      1        1\n",
        "140  00:04:40     C     280      1        1\n",
        "142  00:04:44    S*     284      1        1\n",
+       "143  00:04:46     N     286      1        1\n",
        "143  00:04:46    Se     286      1        1\n",
        "158  00:05:16    In     316      1        1\n",
        "173  00:05:46    In     346      1        1\n",
        "179  00:05:58     S     358      1        1\n",
        "180  00:06:00     L     360      1        1\n",
        "189  00:06:18     S     378      1        1\n",
-       "57   00:01:54    N*     114      1        1\n",
-       "71   00:02:22     S     142      1        1\n",
-       "78   00:02:36     S     156      1        1\n",
-       "90   00:03:00    N*     180      1        1\n",
-       "93   00:03:06    L*     186      1        1\n",
-       "114  00:03:48    N*     228      1        1\n",
-       "115  00:03:50     S     230      1        1\n",
-       "136  00:04:32     S     272      1        1\n",
-       "143  00:04:46     N     286      1        1\n",
        "190  00:06:20    A8     380      1        1"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_x = dfs.loc[dfs['subject']==1]\n",
-    "df_x.sortby()"
+    "df_x.sort_values(by=['time_s'])"
    ]
   },
   {
