--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -686,139 +686,139 @@
        "      <th>70</th>\n",
        "      <td>02:20:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>8400</td>\n",
+       "      <td>140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
        "      <td>02:22:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>8520</td>\n",
+       "      <td>142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>72</th>\n",
        "      <td>02:24:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>8640</td>\n",
+       "      <td>144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>73</th>\n",
        "      <td>02:26:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>8760</td>\n",
+       "      <td>146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
        "      <td>02:28:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>8880</td>\n",
+       "      <td>148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
        "      <td>02:30:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>9000</td>\n",
+       "      <td>150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
        "      <td>02:36:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>9360</td>\n",
+       "      <td>156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83</th>\n",
        "      <td>02:46:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>9960</td>\n",
+       "      <td>166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>03:18:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>11880</td>\n",
+       "      <td>198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
        "      <td>03:20:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>12000</td>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
        "      <td>03:48:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>13680</td>\n",
+       "      <td>228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
        "      <td>03:50:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>13800</td>\n",
+       "      <td>230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
        "      <td>03:52:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>13920</td>\n",
+       "      <td>232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>135</th>\n",
        "      <td>04:30:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16200</td>\n",
+       "      <td>270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
        "      <td>04:32:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16320</td>\n",
+       "      <td>272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>137</th>\n",
        "      <td>04:34:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16440</td>\n",
+       "      <td>274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>138</th>\n",
        "      <td>04:36:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16560</td>\n",
+       "      <td>276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>139</th>\n",
        "      <td>04:38:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16680</td>\n",
+       "      <td>278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>140</th>\n",
        "      <td>04:40:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16800</td>\n",
+       "      <td>280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>141</th>\n",
        "      <td>04:42:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>16920</td>\n",
+       "      <td>282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>142</th>\n",
        "      <td>04:44:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>17040</td>\n",
+       "      <td>284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>188</th>\n",
        "      <td>06:16:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>22560</td>\n",
+       "      <td>376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>189</th>\n",
        "      <td>06:18:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>22680</td>\n",
+       "      <td>378</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -826,32 +826,32 @@
       ],
       "text/plain": [
        "       tiempo  event  time_s\n",
-       "70   02:20:00      1    8400\n",
-       "71   02:22:00      1    8520\n",
-       "72   02:24:00      1    8640\n",
-       "73   02:26:00      1    8760\n",
-       "74   02:28:00      1    8880\n",
-       "75   02:30:00      1    9000\n",
-       "78   02:36:00      1    9360\n",
-       "83   02:46:00      1    9960\n",
-       "99   03:18:00      1   11880\n",
-       "100  03:20:00      1   12000\n",
-       "114  03:48:00      1   13680\n",
-       "115  03:50:00      1   13800\n",
-       "116  03:52:00      1   13920\n",
-       "135  04:30:00      1   16200\n",
-       "136  04:32:00      1   16320\n",
-       "137  04:34:00      1   16440\n",
-       "138  04:36:00      1   16560\n",
-       "139  04:38:00      1   16680\n",
-       "140  04:40:00      1   16800\n",
-       "141  04:42:00      1   16920\n",
-       "142  04:44:00      1   17040\n",
-       "188  06:16:00      1   22560\n",
-       "189  06:18:00      1   22680"
+       "70   02:20:00      1     140\n",
+       "71   02:22:00      1     142\n",
+       "72   02:24:00      1     144\n",
+       "73   02:26:00      1     146\n",
+       "74   02:28:00      1     148\n",
+       "75   02:30:00      1     150\n",
+       "78   02:36:00      1     156\n",
+       "83   02:46:00      1     166\n",
+       "99   03:18:00      1     198\n",
+       "100  03:20:00      1     200\n",
+       "114  03:48:00      1     228\n",
+       "115  03:50:00      1     230\n",
+       "116  03:52:00      1     232\n",
+       "135  04:30:00      1     270\n",
+       "136  04:32:00      1     272\n",
+       "137  04:34:00      1     274\n",
+       "138  04:36:00      1     276\n",
+       "139  04:38:00      1     278\n",
+       "140  04:40:00      1     280\n",
+       "141  04:42:00      1     282\n",
+       "142  04:44:00      1     284\n",
+       "188  06:16:00      1     376\n",
+       "189  06:18:00      1     378"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
     "times_s=[]\n",
     "for i in range(0, len(df_x1)):\n",
     "    l = df_x1.Tiempo.iloc[i]\n",
-    "    times_s.append(  int(datetime.timedelta(hours=l.hour, minutes=l.minute, seconds=l.second).total_seconds()) )\n",
+    "    times_s.append( int(datetime.timedelta(hours=0, minutes=l.hour, seconds=l.minute).total_seconds())  )\n",
     "#\n",
     "df_x1.columns=['tiempo', 'event']\n",
     "df_x1['time_s'] = times_s\n",
@@ -870,45 +870,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8400"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_x1 = df_x.loc[df_x[COL]==1]\n",
-    "l = df_x1.Tiempo.iloc[0]\n",
-    "int(datetime.timedelta(hours=l.hour, minutes=l.minute, seconds=l.second).total_seconds()) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.time(2, 20)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
