--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "4  00:00:08      0       8"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,460 +898,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter=0\n",
+    "starts=[]\n",
+    "finals=[]\n",
+    "for i in range(0, len(df_x)):\n",
+    "    #print(df_x.iloc[i, 1])\n",
+    "    if df_x.iloc[i, 1]==0:\n",
+    "        if counter==0:\n",
+    "            pass\n",
+    "        else:\n",
+    "            finals.append([df_x.loc[i, 'tiempo'], df_x.loc[i, 'event'], df_x.loc[i, 'time_s']])\n",
+    "            counter=0\n",
+    "    elif df_x.iloc[i, 1]==1:\n",
+    "        if counter==0:\n",
+    "            starts.append([df_x.loc[i, 'tiempo'], df_x.loc[i, 'event'], df_x.loc[i, 'time_s']])\n",
+    "        counter+=1\n",
+    "    ###\n",
+    "    if i==len(df_x)-1: ##si al final todavia están\n",
+    "        if counter !=0:\n",
+    "            finals.append([df_x.loc[i, 'tiempo'], df_x.loc[i, 'event'], df_x.loc[i, 'time_s']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tiempo</th>\n",
-       "      <th>S1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00:02:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00:04:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00:06:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00:08:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>00:10:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>00:12:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>00:14:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>00:16:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>00:18:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>00:20:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>00:22:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>00:24:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>00:26:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>00:28:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>00:30:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>00:32:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>00:34:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>00:36:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>00:38:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>00:40:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>00:42:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>00:44:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>00:46:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>00:48:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>00:50:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>00:52:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>00:54:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>00:56:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>00:58:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>05:20:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>161</th>\n",
-       "      <td>05:22:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>05:24:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>05:26:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>05:28:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>05:30:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166</th>\n",
-       "      <td>05:32:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>05:34:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>05:36:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>05:38:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>05:40:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>05:42:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>05:44:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>05:46:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>05:48:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>05:50:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>05:52:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>05:54:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>05:56:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>05:58:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>06:02:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>06:04:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>06:06:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>06:08:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>06:10:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>06:12:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>06:14:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>06:16:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>190 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Tiempo  S1\n",
-       "0    00:00:00   0\n",
-       "1    00:02:00   0\n",
-       "2    00:04:00   0\n",
-       "3    00:06:00   0\n",
-       "4    00:08:00   0\n",
-       "5    00:10:00   0\n",
-       "6    00:12:00   0\n",
-       "7    00:14:00   0\n",
-       "8    00:16:00   0\n",
-       "9    00:18:00   0\n",
-       "10   00:20:00   0\n",
-       "11   00:22:00   0\n",
-       "12   00:24:00   0\n",
-       "13   00:26:00   0\n",
-       "14   00:28:00   0\n",
-       "15   00:30:00   0\n",
-       "16   00:32:00   0\n",
-       "17   00:34:00   0\n",
-       "18   00:36:00   0\n",
-       "19   00:38:00   0\n",
-       "20   00:40:00   0\n",
-       "21   00:42:00   0\n",
-       "22   00:44:00   0\n",
-       "23   00:46:00   0\n",
-       "24   00:48:00   0\n",
-       "25   00:50:00   0\n",
-       "26   00:52:00   0\n",
-       "27   00:54:00   0\n",
-       "28   00:56:00   0\n",
-       "29   00:58:00   0\n",
-       "..        ...  ..\n",
-       "160  05:20:00   0\n",
-       "161  05:22:00   0\n",
-       "162  05:24:00   0\n",
-       "163  05:26:00   0\n",
-       "164  05:28:00   0\n",
-       "165  05:30:00   0\n",
-       "166  05:32:00   0\n",
-       "167  05:34:00   0\n",
-       "168  05:36:00   0\n",
-       "169  05:38:00   0\n",
-       "170  05:40:00   0\n",
-       "171  05:42:00   0\n",
-       "172  05:44:00   0\n",
-       "173  05:46:00   0\n",
-       "174  05:48:00   0\n",
-       "175  05:50:00   0\n",
-       "176  05:52:00   0\n",
-       "177  05:54:00   0\n",
-       "178  05:56:00   0\n",
-       "179  05:58:00   0\n",
-       "180  06:00:00   0\n",
-       "181  06:02:00   0\n",
-       "182  06:04:00   0\n",
-       "183  06:06:00   0\n",
-       "184  06:08:00   0\n",
-       "185  06:10:00   0\n",
-       "186  06:12:00   0\n",
-       "187  06:14:00   0\n",
-       "188  06:16:00   1\n",
-       "189  06:18:00   1\n",
-       "\n",
-       "[190 rows x 2 columns]"
+       "[[datetime.time(0, 2, 20), 1, 140],\n",
+       " [datetime.time(0, 2, 36), 1, 156],\n",
+       " [datetime.time(0, 2, 46), 1, 166],\n",
+       " [datetime.time(0, 3, 18), 1, 198],\n",
+       " [datetime.time(0, 3, 48), 1, 228],\n",
+       " [datetime.time(0, 4, 30), 1, 270],\n",
+       " [datetime.time(0, 6, 16), 1, 376]]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_x\n",
-    "counter=0\n",
-    "for i in range(0, len(df_x1)):\n",
-    "    if df_x1.iloc[i, 1]==0:\n",
-    "        counter=0\n",
-    "    elif df_x.iloc[i, 1]==1"
+    "starts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[datetime.time(0, 2, 32), 0, 152],\n",
+       " [datetime.time(0, 2, 38), 0, 158],\n",
+       " [datetime.time(0, 2, 48), 0, 168],\n",
+       " [datetime.time(0, 3, 22), 0, 202],\n",
+       " [datetime.time(0, 3, 54), 0, 234],\n",
+       " [datetime.time(0, 4, 46), 0, 286],\n",
+       " [datetime.time(0, 6, 18), 1, 378]]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finals"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
+   ]
   },
   {
    "cell_type": "code",
